<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/main_frame_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      	android:layout_margin="5dp"
        android:weightSum="5"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_main_shouzhimingxi_dangri"
            android:background="?attr/button_number_background_port"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="36dp"
            style="@style/buttonFunctionStylePortBig"
            android:text="@string/main_shouzhimingxi_textview_dangri"
            android:padding="0dp"/>

        <Button
            android:id="@+id/btn_main_shouzhimingxi_benzhou"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="5dp"
            style="@style/buttonFunctionStylePortBig"
            android:background="?attr/button_number_background_port"
            android:text="@string/main_shouzhimingxi_textview_benzhou"
            android:padding="0dp"/>

        <Button
            android:id="@+id/btn_main_shouzhimingxi_dangyue"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="5dp"
            style="@style/buttonFunctionStylePortBig"
            android:background="?attr/button_number_background_port"
            android:text="@string/main_shouzhimingxi_textview_dangyue"
            android:padding="0dp" />
        
        <Button
            android:id="@+id/btn_main_shouzhimingxi_chaxun"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="5dp"
            style="@style/buttonFunctionStylePortBig"
            android:background="?attr/button_number_background_port"
            android:text="@string/main_shouzhimingxi_button_chaxun"
            android:padding="0dp"/>
    </LinearLayout>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:orientation="horizontal" >
         <Button
            android:id="@+id/btn_main_shouzhimingxi_dayin"
            android:layout_weight="1"
            android:layout_height="36dp"
            android:background="?attr/button_function_background_port"
            android:text="@string/main_shouzhimingxi_button_dayin"
            style="@style/buttonFunctionStylePortBig"
            android:padding="0dp"/>
        <Spinner
            android:id="@+id/btn_main_shouzhimingxi_type"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="36dp"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:entries="@array/agenttype"/>
    </LinearLayout>

    <TableLayout
        android:id="@+id/detail_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="?attr/main_border_style"
        android:padding="?attr/main_list_padding"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <!-- 表头 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="?attr/main_table_title_color" >

            <TextView
               android:id="@+id/tv1"
                style="?attr/main_shoufeimingxi_listtv_style"
                android:text="@string/main_shouzhimingxi_listtv_jiaoyidanhao" />

            <TextView
                android:id="@+id/tv2"
                style="?attr/main_shoufeimingxi_listtv_style"
                android:text="@string/main_shouzhimingxi_listtv_jiaoyileixing" />

            <TextView
               android:id="@+id/tv3"
                style="?attr/main_shoufeimingxi_listtv_style"
                android:text="@string/main_shouzhimingxi_listtv_jiaoyishijian" />

            <TextView
               android:id="@+id/tv4"
                style="?attr/main_shoufeimingxi_listtv_style"
                android:text="@string/main_shouzhimingxi_listtv_shouru" />

            <TextView
                android:id="@+id/tv5"
                style="?attr/main_shoufeimingxi_listtv_style"
                android:text="@string/main_shouzhimingxi_listtv_zhichu" />

            <TextView
               android:id="@+id/tv6"
                style="?attr/main_shoufeimingxi_listtv_style"
                android:text="@string/main_shouzhimingxi_listtv_yuer" />
        </TableRow>
        
        <View android:layout_width="match_parent"
            android:layout_height="?attr/listview_divide_height"
            android:background="?attr/listview_divide_color"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <!-- 列表 -->
            <com.common.powertech.widget.PullRefreshLayout
                android:id="@+id/pull_container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#f5f5f5"
                android:scrollbars="vertical" >

                <include
                    android:id="@+id/action_view"
                    layout="@layout/refresh_layout" />

                <include
                    android:id="@+id/tool_view"
                    layout="@layout/tool_layout" />

                <com.common.powertech.widget.PullUpListView
                    android:id="@+id/listShouzhimingxiView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:cacheColorHint="@android:color/transparent"
                    android:divider="?attr/listview_divide_color"
                    android:dividerHeight="?attr/listview_divide_height"
                    android:focusable="false"
                    android:paddingLeft="0dip"
                    android:scrollbars="none" />

            </com.common.powertech.widget.PullRefreshLayout>
        </LinearLayout>

    </TableLayout>

</LinearLayout>